[gd_scene load_steps=3 format=2]

[ext_resource path="res://HUD/Scoring.gd" type="Script" id=1]
[ext_resource path="res://HUD/theme.tres" type="Theme" id=2]

[node name="Scoring" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.977
margin_right = 9.0
margin_bottom = -0.200012
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -771.0
margin_right = -118.0
margin_bottom = 79.0
text = "0"
align = 2
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboLabels" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="ComboLabels"]
margin_top = 1.0
margin_bottom = 39.0
grow_horizontal = 0
text = "12312"
align = 2
valign = 1

[node name="Multiplicator" type="Label" parent="ComboLabels"]
margin_left = 4.0
margin_top = 1.0
margin_right = 4.0
margin_bottom = 39.0
text = "x321312"

[node name="ComboBar" type="ProgressBar" parent="ComboLabels"]
margin_left = -94.0
margin_top = -22.0
margin_right = 121.0
max_value = 100.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="ComboLabels/ComboBar"]
[connection signal="tween_all_completed" from="ComboLabels/ComboBar/Tween" to="." method="_on_Tween_tween_all_completed"]
